fix arrow button not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ header:hover .menu ul {
   background-size: 14px;
   background-position: center;
   transition: all ease 0.5s;
+  z-index: 99;
 }
 
 .btn:hover {
